fix: Correct scrollbar style

--- a/public/css/default/main.css
+++ b/public/css/default/main.css
@@ -28,9 +28,8 @@ main .main-conteudo{
 
 .main-conteudo::-webkit-scrollbar-thumb
 {
-	border-radius: 10px;
-	
-	background: linear-gradient(135deg, rgb(220, 171, 226), rgb(153, 153, 236));
+	border-radius: 10px;	
+    background-color: #333333;
 }
 
 .main-conteudo .painel{
